# vatcomply

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  alembic.ini  app.json  app.py  auth.py  conftest.py  crontab  db.py  docker-compose.yml  errors.py  manage.py  models.py  periodic.py  pyproject.toml  railway.toml  requirements.in  requirements.txt  settings.py  start.sh  utils.py
.circleci/: config.yml
.github/workflows/: docker.yml  docs.yml  pytest.yml  tests.yml
docs/: zensical.toml
docs/docs/: index.md  rate-limiting.md  technology-stack.md
docs/overrides/: main.html
migrations/: env.py
migrations/versions/: 17ee4cab92e6_create_countries_table.py  ae9f5ea7bd9a_create_rates_table.py  c8d6ab7251df_create_users_table.py  f8206308f599_fix_countries_data_types.py  fc84c195985a_create_users_table.py
tests/: test_auth.py  test_currencies.py  test_rates_api.py  test_registration.py  test_vat.py
vatcomply/: admin.py  api.py  asgi.py  constants.py  currency_metadata.py  drizzle.config.json  error_handler.py  http.py  middleware.py  models.py  package.json  schemas.py  serializers.py  settings.py  urls.py  views.py  wrangler.toml  wsgi.py
vatcomply/migrations/: 0001_initial.py  0002_alter_country_emoji_alter_country_phone_code_and_more.py  0003_vatrate.py  0004_vatrate_rate_comments.py  0005_vatrate_rate_categories.py
vatcomply/src/: index.ts
vatcomply/tests/: conftest.py  fixtures.py  test_cors.py  test_countries.py  test_currencies.py  test_geolocate.py  test_iban.py  test_middleware.py  test_rates.py  test_root.py  test_vat.py  test_vat_rates.py
vatcomply/users/: admin.py  forms.py  managers.py  models.py
vatcomply/wsdl/: VatRetrievalService.wsdl  VatRetrievalServiceMessage.xsd  VatRetrievalServiceType.xsd  checkVatService.wsdl
website/: index.html  package-lock.json  package.json  robots.txt  sitemap.xml  vercel.json
website/components/: analytics.js  head.js  (+4 more)
(+32 files in other folders)
