[project]
name = "vatcomply"
version = "0.1.0"
requires-python = ">=3.11, <3.13"
dependencies = [
    "babel",
    "django",
    "django-bolt",
    "django-environ",
    "dpath",
    "httpx<0.28",
    "lxml",
    "msgspec",
    "pendulum",
    "pycountry",
    "schwifty",
    "sentry-sdk[django]",
    "zeep",
]

[project.optional-dependencies]
dev = [
    "coverage",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "zensical>=0.0.23",
]
