[project]
name = "vatcomply"
version = "0.1.0"
requires-python = ">=3.11, <3.13"
dependencies = [
    "babel",
    "django",
    "django-bolt",
    "django-environ",
    "dpath",
    "httpx<0.28",
    "lxml",
    "msgspec",
    "pendulum",
    "pycountry",
    "schwifty",
    "sentry-sdk[django]",
    "zeep",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "vatcomply.settings"
pythonpath = ["."]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "zensical>=0.0.23",
]
